# PokeBench

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  convert_pokemon_data.py  evals.py  ezvals.json  generate_references.py  generate_world.py  main.py  models.py  pyproject.toml  runtime.py  world_runtime.py
.claude/commands/: generate-evals.md
data/: eval_references.json
