[project]
name = "pokebench"
version = "0.1.0"
description = "A synthetic evaluation environment for testing agent tool use in a Pokemon-themed admin console"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "faker>=38.2.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "ezvals>=0.1.10",
    "langsmith>=0.5.0",
]
